fix: added scrollbar to report component

--- a/src/components/Report/Report.module.css
+++ b/src/components/Report/Report.module.css
@@ -28,6 +28,8 @@
 .reportContent {
   display: flex;
   justify-content: flex-start;
+  overflow-y: scroll;
+  height: 100%;
 }
 
 .table {
